# hydroponic-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  .test.env  Dockerfile  conftest.py  env.example  pyproject.toml  setup.cfg
backend/common/: decorators.py  models.py  pagination.py
backend/config/: auth_urls.py  settings.py  urls.py
backend/hydroponic/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/hydroponic/migrations/: 0001_initial.py
backend/hydroponic/tests/: factories.py  fixtures.py
backend/hydroponic/tests/views/: test_measurements.py  test_systems.py
backend/scripts/: run_local.sh
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: factories.py  fixtures.py
backend/users/tests/views/: test_auth.py  test_users.py
